feat(core): add room image uploads